--- a/src/AasxPackageExplorerV2/AasxPackageExplorer/AasxPackageExplorer.csproj
+++ b/src/AasxPackageExplorerV2/AasxPackageExplorer/AasxPackageExplorer.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
@@ -26,29 +26,29 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations">
-      <Version>2020.1.0</Version>
+      <Version>2020.3.0</Version>
     </PackageReference>
     <PackageReference Include="jose-jwt">
-      <Version>2.5.0</Version>
+      <Version>3.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces">
-      <Version>5.0.0-rc.1.20451.14</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
-      <Version>5.0.0-rc.1.20451.14</Version>
+      <Version>5.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-      <Version>5.0.0-rc.1.20451.14</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
     </PackageReference>
     <PackageReference Include="NLog">
-      <Version>4.7.5</Version>
+      <Version>4.7.6</Version>
     </PackageReference>
-    <PackageReference Include="System.Drawing.Common" Version="5.0.0-rc.1.20451.14" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>4.5.3</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Threading.Tasks.Extensions">
       <Version>4.5.4</Version>
