--- a/src/AasxPackageExplorerV2/AasxPackageExplorer/AasxPackageExplorer.csproj
+++ b/src/AasxPackageExplorerV2/AasxPackageExplorer/AasxPackageExplorer.csproj
@@ -4,6 +4,7 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
+	  <RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
   </PropertyGroup>
 
   <ItemGroup>
